@@ -78,7 +78,7 @@ const char* LANGUAGE_CXX = "C++";
 const char* LANGUAGE_JAVA = "Java";
 
 const char* SKIP_ENCODING_FLAG = "--skip-encoding";
-const char* SKIP_ENCODING_FLAG_SHORT = "-j";
+const char* SKIP_ENCODING_FLAG_SHORT = "-k";
 
 /* Return Status */
 
